--- a/OtoTamir.WEBUI/Views/Shared/Components/_ChangePasswordViewComponentPartial/Default.cshtml
+++ b/OtoTamir.WEBUI/Views/Shared/Components/_ChangePasswordViewComponentPartial/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model ChangePasswordDTO
+﻿@model ChangePasswordViewModel
 
 
 <form asp-action="ChangePassword" asp-controller="Account" method="post">
