newservicerecord page done contuining on servicerecordcontroller

--- a/OtoTamir.WEBUI/Views/Shared/_Layout.cshtml
+++ b/OtoTamir.WEBUI/Views/Shared/_Layout.cshtml
@@ -83,9 +83,9 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="/Account/Login" class="nav-link">
+                                    <a href="/ServiceRecord/Index" class="nav-link">
                                         <i class="nav-icon bi bi-circle"></i>
-                                        <p>Login</p>
+                                        <p>Yeni işlem oluştur</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
