--- a/OtoTamir.WEBUI/Views/Shared/Components/_ChangePasswordViewComponentPartial/Default.cshtml
+++ b/OtoTamir.WEBUI/Views/Shared/Components/_ChangePasswordViewComponentPartial/Default.cshtml
@@ -28,7 +28,8 @@
                 <button type="button"
                         class="btn btn-primary confirm-button"
                         data-confirm-message="Şifreyi güncellemek istediğinize emin misiniz?"
-                        data-form-id="changePasswordForm">
+                        data-form-action="/Account/ChangePassword"
+                        data-form-method="post">
                     Şifre Güncelle
                 </button>
             </div>
