--- a/OtoTamir.WEBUI/Views/Shared/_Layout.cshtml
+++ b/OtoTamir.WEBUI/Views/Shared/_Layout.cshtml
@@ -236,7 +236,7 @@
             integrity="sha256-+vh8GkaU7C9/wbSLIcwq82tQ2wTf44aOHA8HlBMwRI8="
             crossorigin="anonymous"></script>
     @RenderSection("Scripts", required: false)
-
+    <script src="~/js/confirmModal.js"></script>
     <!--end::Script-->
 </body>
 <!--end::Body-->
