--- a/OtoTamir.WEBUI/Views/Shared/_LayoutAccount.cshtml
+++ b/OtoTamir.WEBUI/Views/Shared/_LayoutAccount.cshtml
@@ -75,6 +75,7 @@
           }
         });
     </script>
+    <script src="~/js/confirmModal.js"></script>
     <!--end::OverlayScrollbars Configure-->
     <!--end::Script-->
 </body>
