--- a/OtoTamir.WEBUI/Views/Shared/Components/_CreateClientViewComponentPartial/Default.cshtml
+++ b/OtoTamir.WEBUI/Views/Shared/Components/_CreateClientViewComponentPartial/Default.cshtml
@@ -41,7 +41,7 @@
                         <span asp-validation-for="Notes" class="text-danger"></span>
                     </div>
 
-                    @* <input type="hidden" asp-for="MechanicId" /> *@
+                    <input type="hidden" asp-for="ReturnUrl"     />
                 </div>
             </div>
             <div class="modal-footer">
