--- a/OtoTamir.WEBUI/Views/Shared/Components/_ChangePasswordViewComponentPartial/Default.cshtml
+++ b/OtoTamir.WEBUI/Views/Shared/Components/_ChangePasswordViewComponentPartial/Default.cshtml
@@ -25,11 +25,11 @@
             </div>
 
             <div class="text-end">
-                <button type="button"
-                        class="btn btn-primary confirm-button"
-                        data-confirm-message="Şifreyi güncellemek istediğinize emin misiniz?"
+                <button type="submit"
+                        class="btn btn-primary"
+                         data-confirm-message="Şifreyi güncellemek istediğinize emin misiniz?"
                         data-form-action="/Account/ChangePassword"
-                        data-form-method="post">
+                        data-form-method="post"> 
                     Şifre Güncelle
                 </button>
             </div>
