--- a/OtoTamir.WEBUI/Views/Shared/Components/_CreateVehicleViewComponentPartial/Default.cshtml
+++ b/OtoTamir.WEBUI/Views/Shared/Components/_CreateVehicleViewComponentPartial/Default.cshtml
@@ -36,6 +36,7 @@
                         </div>
 
                         <input type="hidden" asp-for="ClientId" />
+                        <input type="hidden" asp-for="ReturnUrl" />
                     </div>
                 </div>
                 <div class="modal-footer">
