--- a/OtoTamir.WEBUI/Views/Shared/Components/_ListVehicleViewComponentPartial/Default.cshtml
+++ b/OtoTamir.WEBUI/Views/Shared/Components/_ListVehicleViewComponentPartial/Default.cshtml
@@ -50,6 +50,10 @@
                                     <textarea name="SymptomDescription" class="form-control"></textarea>
                                 </div>
                                 <div class="mb-2">
+                                    <label>Yapılacak İşlem</label>
+                                    <textarea name="ServiceRecordName" class="form-control"></textarea>
+                                </div>
+                                <div class="mb-2">
                                     <label>Tahmini Ücret</label>
                                     <input type="number" name="EstimatedCost" class="form-control" />
                                 </div>
