--- a/OtoTamir.WEBUI/Views/Shared/_Layout.cshtml
+++ b/OtoTamir.WEBUI/Views/Shared/_Layout.cshtml
@@ -98,7 +98,7 @@
                         </li>
                         
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="/ServiceRecord/Ongoing" class="nav-link">
                                 <i class="nav-icon bi bi-clipboard-fill"></i>
                                 <p>
                                     Devam Eden İşlemler                                   
