--- a/OtoTamir.WEBUI/Views/_ViewImports.cshtml
+++ b/OtoTamir.WEBUI/Views/_ViewImports.cshtml
@@ -5,5 +5,6 @@
 @using OtoTamir.CORE.DTOs.ClientDTOs
 @using OtoTamir.CORE.DTOs.VehicleDTOs
 @using OtoTamir.CORE.DTOs.MechanicDTOs
+@using OtoTamir.CORE.DTOs.SymptomDTOs
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
