--- a/OtoTamir.WEBUI/Views/_ViewImports.cshtml
+++ b/OtoTamir.WEBUI/Views/_ViewImports.cshtml
@@ -6,5 +6,7 @@
 @using OtoTamir.CORE.DTOs.VehicleDTOs
 @using OtoTamir.CORE.DTOs.MechanicDTOs
 @using OtoTamir.CORE.DTOs.SymptomDTOs
+@using OtoTamir.CORE.DTOs.ServiceRecordDTOs
 @using Microsoft.AspNetCore.Identity
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
